# GravitySimulation

./: .gitignore  AddPlanetDialog.cpp  AddPlanetDialog.h  CMakeLists.txt  Doxyfile  GravitySimulation.cpp  GravitySimulation.h  LICENSE  PlanetInfoDialog.cpp  PlanetInfoDialog.h  README.md  SimulationExceptions.h  SimulationGLWidget.cpp  SimulationGLWidget.h  main.cpp
docs/html/: _add_planet_dialog_8cpp.html  _add_planet_dialog_8h.html  _add_planet_dialog_8h.js  _add_planet_dialog_8h_source.html  _gravity_simulation_8cpp.html  _gravity_simulation_8h.html  _gravity_simulation_8h.js  _gravity_simulation_8h_source.html  _planet_info_dialog_8cpp.html  _planet_info_dialog_8h.html  _planet_info_dialog_8h.js  _planet_info_dialog_8h_source.html  _simulation_exceptions_8h.html  _simulation_exceptions_8h.js  _simulation_exceptions_8h_source.html  _simulation_g_l_widget_8cpp.html  _simulation_g_l_widget_8h.html  _simulation_g_l_widget_8h.js  _simulation_g_l_widget_8h_source.html  annotated.html  annotated_dup.js  class_add_planet_dialog-members.html  class_add_planet_dialog.html  class_add_planet_dialog.js  class_gravity_simulation-members.html  class_gravity_simulation.html  class_gravity_simulation.js  class_initialization_exception-members.html  class_initialization_exception.html  class_initialization_exception.js  class_invalid_planet_data_exception-members.html  class_invalid_planet_data_exception.html  class_invalid_planet_data_exception.js  class_planet_info_dialog-members.html  class_planet_info_dialog.html  class_planet_info_dialog.js  class_simulation_g_l_widget-members.html  class_simulation_g_l_widget.html  class_simulation_g_l_widget.js  class_simulation_logic_exception-members.html  (+23 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+21 more)
docs/latex/: _add_planet_dialog_8cpp.tex  _add_planet_dialog_8h.tex  _add_planet_dialog_8h_source.tex  _gravity_simulation_8cpp.tex  _gravity_simulation_8h.tex  _gravity_simulation_8h_source.tex  _planet_info_dialog_8cpp.tex  _planet_info_dialog_8h.tex  _planet_info_dialog_8h_source.tex  _simulation_exceptions_8h.tex  _simulation_exceptions_8h_source.tex  _simulation_g_l_widget_8cpp.tex  _simulation_g_l_widget_8h.tex  _simulation_g_l_widget_8h_source.tex  annotated.tex  class_add_planet_dialog.eps  class_add_planet_dialog.tex  class_gravity_simulation.eps  class_gravity_simulation.tex  class_initialization_exception.eps  class_initialization_exception.tex  class_invalid_planet_data_exception.eps  class_invalid_planet_data_exception.tex  class_planet_info_dialog.eps  class_planet_info_dialog.tex  class_simulation_g_l_widget.eps  class_simulation_g_l_widget.tex  class_simulation_logic_exception.eps  class_simulation_logic_exception.tex  files.tex  hierarchy.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  refman.tex  struct_object.tex
tests/: test_exceptions.cpp  test_main.cpp
